backend/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passmaster-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passmaster-db
  template:
    metadata:
      labels:
        app: passmaster-db
    spec:
      containers:
      - name: postgres
        image: postgres:14.8
        ports:
        - containerPort: 5432
