backend/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passmaster-db
spec:
  selector:
    app: passmaster-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
