backend/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passmaster-redis
spec:
  selector:
    app: passmaster-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
