backend/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: passmaster-web
spec:
  selector:
    app: passmaster-web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
