backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passmaster-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "passmaster-lb-static-ipv4"
    networking.gke.io/managed-certificates: "passmaster-api-cert"
spec:
  rules:
  - host: "passmaster-api.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: passmaster-web
            port:
              number: 8000
