backend/passmaster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passmaster-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: passmaster-tls
spec:
  rules:
  - host: passmaster-api.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: passmaster-web
            port:
              number: 8000
